--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,16 @@ services:
           cpus: '1'
           memory: ${JAVA_MAX_RAM:-4G}
 
+    # SECURITY: Prevent privilege escalation
+    security_opt:
+      - no-new-privileges:true
+
+    # SECURITY: Drop unnecessary capabilities
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE  # Allow binding to privileged ports if needed
+
   # ============================================================
   # Hytale Server Manager - Web UI
   # ============================================================
@@ -117,10 +127,18 @@ services:
     restart: unless-stopped
 
     environment:
-      # Authentication
-      - MANAGER_USERNAME=${MANAGER_USERNAME:-admin}
-      - MANAGER_PASSWORD=${MANAGER_PASSWORD:-changeme}
-      - JWT_SECRET=${JWT_SECRET:-please-change-this-secret-key}
+      # Authentication (REQUIRED - no defaults for security)
+      # SECURITY: These MUST be set in your .env file or Portainer environment
+      # The manager will fail to start in strict mode without proper credentials
+      - MANAGER_USERNAME=${MANAGER_USERNAME:?MANAGER_USERNAME is required}
+      - MANAGER_PASSWORD=${MANAGER_PASSWORD:?MANAGER_PASSWORD is required}
+      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required - use: openssl rand -base64 48}
+      # CORS Origins (REQUIRED for security)
+      - CORS_ORIGINS=${CORS_ORIGINS:-}
+      # Security mode: 'strict' (default) or 'warn'
+      - SECURITY_MODE=${SECURITY_MODE:-strict}
+      # Trust proxy for X-Forwarded-* headers (set to true if behind reverse proxy)
+      - TRUST_PROXY=${TRUST_PROXY:-false}
 
       # Target container
       - GAME_CONTAINER_NAME=${STACK_NAME:-hytale}
@@ -184,6 +202,15 @@ services:
         reservations:
           cpus: '0.25'
           memory: 128M
+
+    # SECURITY: Prevent privilege escalation
+    security_opt:
+      - no-new-privileges:true
+
+    # SECURITY: Drop all capabilities, add only what's needed
+    # The manager only needs network access and Docker socket
+    cap_drop:
+      - ALL
 
 # ============================================================
 # Networks
